clarified issue with may in readme

--- a/preprocessing/utility/data_exploration_Utility.ipynb
+++ b/preprocessing/utility/data_exploration_Utility.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14748395, 18)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -15,7 +26,8 @@
     "# for i in range(2012, 2020):\n",
     "#     df_array.append(pd.read_csv(pathstring+str(i)+\".csv\"))\n",
     "# df = pd.concat(df_array)\n",
-    "df = pd.read_csv(pathstring)"
+    "df = pd.read_csv(pathstring)\n",
+    "df.shape"
    ]
   },
   {
