--- a/preprocessing/utility/utilities_step1.ipynb
+++ b/preprocessing/utility/utilities_step1.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,28 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jan\n",
-      "Feb\n",
-      "Mar\n",
-      "Apr\n",
-      "May\n",
-      "Jun\n",
-      "Jul\n",
-      "Aug\n",
-      "Sep\n",
-      "Oct\n",
-      "Nov\n",
-      "Dec\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df2012 = readexcel(\"2012\", IN_PATH)"
    ]
@@ -253,18 +234,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan\n",
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "df2018 = readexcel(\"2018\", IN_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan\n",
+      "Feb\n"
+     ]
+    }
+   ],
    "source": [
     "df2019 = readexcel(\"2019\", IN_PATH)"
    ]
@@ -440,18 +449,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "writedf(df2018, 2018, OUT_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feb\n"
+     ]
+    }
+   ],
    "source": [
     "writedf(df2019, 2019, OUT_PATH)"
    ]
@@ -465,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,22 +510,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (13) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (3,4,6,8,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (2,3,5,7,10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (1,3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (0,2,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (1,3,4,5,7,9,10,12,14,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (0,2,3,4,6,8,9,11,13,15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (6,8,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (5,7,10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
@@ -507,12 +542,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15658523, 16)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(15658523, 16)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Drop extra column from index if it exists\n",
-    "df.drop('Unnamed: 0', inplace=True, axis=1, errors='ignore')"
+    "print(df.shape)\n",
+    "df.drop('Unnamed: 0', inplace=True, axis=1, errors='ignore')\n",
+    "df.shape"
    ]
   },
   {
@@ -558,16 +613,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15637769, 16)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = df.dropna(subset=['Premise Address']) #Drop NA addresses"
+    "df = df.dropna(subset=['Premise Address']) #Drop NA addresses\n",
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,14 +644,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (3,5,6,7,8,9,10,11,12,13,14,16,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/mirabel/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (0,2,3,4,5,6,7,8,9,10,11,13,15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
@@ -596,19 +663,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0,)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Strip extra spaces from each address\n",
     "s_utilities = df['Premise Address'].str.strip()\n",
     "#Uncomment if this results in memory issues\n",
-    "# del df "
+    "# del df \n",
+    "s_utilities[s_utilities.isna()].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -632,6 +711,16 @@
       "14000000\n",
       "15000000\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15637769"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -648,9 +737,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0,)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fixed_util = pd.Series(lis)\n",
     "# del lis\n",
@@ -661,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +775,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,17 +786,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Export fixed addresses to csv\n",
-    "fixed_util.to_csv(path+\"fixed_addr.csv\", index=False)"
+    "#fixed_util.to_csv(path+\"fixed_addr.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +805,7 @@
        "(15637769,)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,10 +986,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15637769, 16)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_u = df['Premise Address']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_"
+   ]
   }
  ],
  "metadata": {
