sql for database design

--- a/preprocessing/database/db_handoff.ipynb
+++ b/preprocessing/database/db_handoff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,6 +164,37 @@
    "metadata": {},
    "source": [
     "#### Does the address table have correct columns, datatypes, and values?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AddressID',\n",
+       " 'Address',\n",
+       " 'XCoord',\n",
+       " 'YCoord',\n",
+       " 'Tract',\n",
+       " 'BlockGroup',\n",
+       " 'Block',\n",
+       " 'TaxID',\n",
+       " 'BlockGroupTract',\n",
+       " 'BlockGroupID',\n",
+       " 'TractID',\n",
+       " 'RealEstateID']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(df_address)"
    ]
   },
   {
