--- a/preprocessing/propertyvalues/fix_tax_addresses_master.ipynb
+++ b/preprocessing/propertyvalues/fix_tax_addresses_master.ipynb
@@ -5401,9 +5401,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cds_env] *",
+   "display_name": "Python [conda env:cds] *",
    "language": "python",
-   "name": "conda-env-cds_env-py"
+   "name": "conda-env-cds-py"
   },
   "language_info": {
    "codemirror_mode": {
